# tiny-dec

./: .gitignore  DEVELOPMENT_NOTES.md  README.md  development.md  implementation.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: suggest-resource.yml
.github/workflows/: ci.yml
docker/: Dockerfile.dev
scripts/: build_fixtures.sh  dev_linux.sh  install_dep.sh  svg_to_gif.py
skills/teach-decompilation/: SKILL.md  docker-helper.md
stubs/pwn/: __init__.pyi
tests/: conftest.py  test_cli_parser.py
tests/fixtures/: README.md
tests/posts/: README.md  test_cli_stage_fixture_matrix.py
tiny_dec/: __init__.py  __main__.py  cli.py
tiny_dec/analysis/: __init__.py  _helpers.py
tiny_dec/c_emit/: __init__.py  models.py  pretty.py  render_expr.py  stage_post_17_c_lowering.md  transform.py
tiny_dec/decode/: __init__.py  decoder.py  pretty.py  stage_post_01_decode.md
tiny_dec/disasm/: __init__.py  builder.py  models.py  pretty.py  stage_post_03_disasm.md
tiny_dec/ir/: __init__.py  containers.py  function_ir.py  lift_rv32i.py  pcode.py  pretty.py  pretty_containers.py  program_ir.py  stage_post_02_lift_pcode.md  stage_post_04_ir_containers.md
tiny_dec/loader/: __init__.py  api.py  errors.py  main_locator.py  models.py  pretty.py  program_view.py  stage_post_00_loader.md
tiny_dec/pipeline/: __init__.py  decompile.py  passes.py  scheduler.py  stage_post_18_c_printer_pipeline.md
website/: .gitignore  assemble-gif.py  capture-demo.mjs  index.html  package.json  tsconfig.json
(+238 files in other folders)
